# docs/swagger.yaml
@@ -71,6 +71,34 @@ definitions:
     required:
     - card_id
     type: object
+  handlers.LoginReq:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  handlers.RegisterReq:
+    properties:
+      email:
+        type: string
+      full_name:
+        type: string
+      password:
+        minLength: 6
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - full_name
+    - password
+    - username
+    type: object
   handlers.StationReq:
     properties:
       ip_address:
@@ -380,14 +408,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: Authenticate user with username and password
+      description: Authenticate user with email and password, returns JWT token
       parameters:
       - description: Login credentials
         in: body
         name: request
         required: true
         schema:
-          type: object
+          $ref: '#/definitions/handlers.LoginReq'
       produces:
       - application/json
       responses: {}
@@ -400,9 +428,33 @@ paths:
       - application/json
       description: Register a new user account with username, password, email, and
         full name
+      parameters:
+      - description: User registration data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.RegisterReq'
       produces:
       - application/json
-      responses: {}
+      responses:
+        "201":
+          description: Đã tạo tài khoản thành công
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.User'
+              type: object
+        "400":
+          description: Bad request - validation error, email/username already exists
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.Response'
       summary: Register a new user
       tags:
       - auth
